--- a/KGERP/Views/BillRequisition/BudgetAndEstimatingApproval.cshtml
+++ b/KGERP/Views/BillRequisition/BudgetAndEstimatingApproval.cshtml
@@ -52,7 +52,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label asp-for="BoQDivisionId" class="form-control-label">Select BoQ Division</label>
-                                        @Html.DropDownListFor(model => model.BoQDivisionId, Model.BoqDivisionsSelectList, "==Select BoQ Division==", new { id = "ddlBoQDivisionId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                        @Html.DropDownListFor(model => model.BoQDivisionId, new SelectList (Model.BoqDivisionsSelectList, "Text", "Value")  , "==Select BoQ Division==", new { id = "ddlBoQDivisionId", @class = "form-control searchingDropdown", style = "width:100%" })
                                         @Html.ValidationMessageFor(model => model.BoQDivisionId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -60,15 +60,15 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label asp-for="BoQItemId" class="form-control-label">Select BoQ Item</label>
-                                        @Html.DropDownListFor(model => model.BoQItemId, Model.BoqItemSelectList, "==Select BoQ Item==", new { id = "ddlBoQItemId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                        @Html.DropDownListFor(model => model.BoQItemId, new SelectList(Model.BoqItemSelectList, "Value", "Text" ), "==Select BoQ Item==", new { id = "ddlBoQItemId", @class = "form-control searchingDropdown", style = "width:100%" })
                                         @Html.ValidationMessageFor(model => model.BoQItemId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        @Html.Label("Status:", htmlAttributes: new { @class = "control-label" })
+                                        <label asp-for="ProjectId" class="form-control-label">Status<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                         <br />
-                                        @Html.DropDownListFor(model => model.BNEApprovalStatus, Model.EnumBNEStatusList as SelectList, "==Select Status==", new { id = "ddlStatusEnumFK", @class = "form-control ddlReset searchingDropdown", style = "width:100%" })
+                                        @Html.DropDownListFor(model => model.BNEApprovalStatus, Model.EnumBNEStatusList as SelectList, "==Select Status==", new { id = "ddlStatusEnumFK", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
                                         @Html.ValidationMessageFor(model => model.BNEApprovalStatus, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -93,9 +93,9 @@
                         @using (Html.BeginForm("BudgetAndEstimatingApprovalProcess", "BillRequisition", FormMethod.Post, new { id = "budgetAndEstimatingApprovalListFormId", @class = "formValidator" }))
                         {
 
-                            //@Html.HiddenFor(model => model.BoQMapVmList, new { id = "BoQMapVmList" })
-                            if (Model.BoQItemProductMaps?.Any() ?? false)
-                            {
+                                            //@Html.HiddenFor(model => model.BoQMapVmList, new { id = "BoQMapVmList" })
+                                            if (Model.BoQItemProductMaps?.Any() ?? false)
+                                            {
 
 
                                 <table id="KgErpDataTable33" class="table table-bordered table-striped table-responsive">
@@ -143,7 +143,7 @@
 
                                                 }
                                                 else
-                                                {
+                                        {
                                                     <td id="tdBoqEstimateQty_@item.BoQItemProductMapId">@item.EstimatedQty</td>
                                                     <td id="tdBoqUnitRate_@item.BoQItemProductMapId">@item.UnitRate</td>
 
@@ -163,7 +163,7 @@
                                     </tbody>
                                 </table>
                                 if (Model.ApprovalStatus != (int)EnumBudgetAndEstimatingApprovalStatus.Approved)
-                                {
+                                        {
                                     <div class="box-footer">
                                         <div class="row">
                                             <div class="col-md-3"></div>
